# hen_analyser

./: CHANGELOG.md  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: actions.yml
huevolizer/: __init__.py  control_limits.py  dummy.py
tests/: test_control_limits.py  test_transformations.py
tests/data/: producción_diaria.csv
