[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Mario VB"
author-email = "mario.villasante@ciencias.unam.mx"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
home-page = "https://github.com/mvillasante/hen_analyser"
module = "huevolizer"
requires = [
	"pandas"
]
requires-python=">=3.9"
